<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/welcome_image_description"
        android:layout_marginVertical="50dp"
        android:src="@drawable/welcome" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewHeader"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/description_text"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/hastag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/opensans_semibolditalic"
        android:gravity="center"
        android:text="@string/hastag"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hastag"
        android:layout_marginStart="32dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/diamond"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/lavender_rose"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>
