<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/rounded_popup_base_template"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:fontFamily="@font/opensans_bold"
            android:padding="25dp"
            android:text="@string/block_user_popup_message"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/logout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/diamond"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lavender_rose"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
