<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".fragment.ProfilFragment">


    <LinearLayout
        android:id="@+id/profiledetail_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:text="@string/username"
            android:textSize="24sp"
            android:fontFamily="@font/opensans_semibold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profilListMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profiledetail_area"
        >
        <LinearLayout
            android:id="@+id/profilButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/profilTextMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/tvProfilMenuTitleRow1"
                />
            <TextView
                android:id="@+id/profilTextSubMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/gray"
                android:text="@string/tvProfilMenuSubtitleRow1"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bahasaButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/profilButtonMenu"
            >
            <TextView
                android:id="@+id/bahasaTextMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/tvProfilMenuTitleRow2"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/keluarButtonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/profilButtonMenu"
            >
            <TextView
                android:id="@+id/keluarTextMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:fontFamily="@font/opensans_semibold"
                android:text="@string/tvProfilMenuTitleRow3"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>