<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailProfilActivity">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginVertical="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        app:layout_constraintBottom_toTopOf="@id/userNameTextView"
        app:layout_constraintHorizontal_bias="0.5"
        tools:src="@drawable/default_photo" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="48dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImageView"
        app:layout_constraintHorizontal_bias="0.5"
        android:ellipsize="end"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/changeProfilePhotoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/diamond"
        android:paddingVertical="16dp"
        android:text="@string/ubahGambarProfil"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
        app:layout_constraintBottom_toTopOf="@+id/deleteProfilePhotoButton"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.25"
        />

    <Button
        android:id="@+id/deleteProfilePhotoButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/lavender_rose"
        android:paddingVertical="16dp"
        android:text="@string/hapusGambarProfil"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeProfilePhotoButton" />
</androidx.constraintlayout.widget.ConstraintLayout>

